# multica

./: .dockerignore  .easignore  .env.bot  .env.daemon.example  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .goreleaser.yml  .multica-pids  .npmrc  .vercelignore  AGENTS.md  BRANDING.md  CHANGELOG.md  CLAUDE.md  CLI_AND_DAEMON.md  CLI_INSTALL.md  CODE_OF_CONDUCT.md  CONCEPTS.md  CONTRIBUTING.md  CUSTOMIZATIONS.md  Caddyfile  Caddyfile.docker  DESIGN.md  Dockerfile  Dockerfile.daemon  Dockerfile.docs  Dockerfile.web  Dockerfile.web.dockerignore  Dockerfile.web.rtl  FORK.md  LICENSE  LOCAL_DEV.md  Makefile  Multica_AuthKey.p8  PR_EDITOR_ENHANCEMENT.md  RAILWAY.md  README.en.md  README.md  (+49 more)
.ci/: deploy.md  regression.md
.codesight/: CODESIGHT.md  components.md  config.md  coverage.md  graph.md  libs.md  middleware.md  routes.md  schema.md
.devcontainer/: devcontainer.json
.feature-plans/: _plan_sample_format.md
.gitee/: pipeline.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.gsd/: CODEBASE.md  gsd.db  notifications.jsonl
.helloagents/: .ralph-breaker.json
.plans/: customizable-issue-workflows.md
.playwright-mcp/: page-2026-04-07T04-27-23-908Z.yml  page-2026-04-22T02-10-27-006Z.yml
.workflow/: cs-workflow-cli-build.yml  multica-cli-build.yml
apps/: AGENTS.md
apps/multica-win/src-tauri/: Cargo.toml  tauri.conf.json
apps/multica-win/src-tauri/capabilities/: default.json
apps/multica-win/src-tauri/icons/: icon.icns
apps/multica-win/src-tauri/src/: config.rs  daemon.rs  lib.rs  main.rs  proxy.rs
(+7198 files in other folders)
