[package]
name = "multica-win"
version = "0.1.0"
description = "Multica Management Panel"
authors = ["admin"]
edition = "2021"

[lib]
name = "multica_win_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
regex = "1"
